--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,56 +9,64 @@
     <meta name="description" content="A Sinatra demo project created for Flatiron bootcamp">
     <meta name="keywords" content="flatIron, party planner, party, demo, sintra">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <!-- BoostStrap Items START-->
+    <%# Bootstrap items start%>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <!-- BootStrap Items END--->
+    <%# Bootstrap items end%>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <header class="jumbotron text-center">
-      <h1 class='display-1'>Party Planning. Inc</h1>
-      <h3>Best Place to Schedule your Party!</h3>
-      <noscript><p><strong>Warning:</strong> Site functionality is reduced without Javascript enabled.</p></noscript>
-    </header>
-    <nav class="navbar navbar-expand-lg ">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-         <i class="material-icons">menu</i>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="/"><i class="material-icons">home</i></a></li>
-          <%if session['user_id']%>
-            <li class="nav-item"><a class="nav-link" href="/post_auth/party">My Parties</a></li>
-            <li class="nav-item"><a class="nav-link" href="/post_auth/party/new">Schedule a Party</a></li>
-            <li class="nav-item"><a class="nav-link" a href="/venue">Venue Locations</a></li>
-            <li class="nav-item"><a class="nav-link" href="/post_auth/user/me">User Settings</a></li>
-          <%end%>
-          <% if session['admin'] == 'yes' %>
-            <li class="nav-item"><a class="nav-link" href="/admin/venue">Admin Venues</a></li>
-            <li class="nav-item"><a class="nav-link" href="/admin/theme">Admin Themes</a></li>
-          <% end %>
-          <% login_link = session['user_id'] ? '/logout' : '/pre_auth/login' %>
-          <% login_text = session['user_id'] ? 'Logout' : 'Login or Signup' %>
-          <li class="nav-item"><a class="nav-link" href="<%=login_link%>"><%=login_text%></a></li>
-        </ul>
+    <div class="container-fluid">
+      <div class=row>
+        <header class="col-sm-12 jumbotron text-center m mb-0 pb-0">
+          <h1 class='display-1'>Party Planning. Inc</h1>
+          <h3 class="p-3">Best Place to Schedule your Party!</h3>
+          <noscript><p><strong>Warning:</strong> Site functionality is reduced without Javascript enabled.</p></noscript>
+        </header>
       </div>
-    </nav>
-    <% unless flash.empty? %>
-      <% flash.each do |key, message| %>
-        <div class="alert <%=key%> alert-dismissible fade show">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <%= message %>
-        </div>
-      <%end%>
-    <% end %>
+      <% unless flash.empty? %>
+        <% flash.each do |key, message| %>
+          <div class=row>
+            <div class="col-sm-12 text-center alert <%=key%> alert-dismissible fade show">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <%= message %>
+            </div>
+          </div>
+        <%end%>
+      <% end %>
+      <div class=row>
+        <nav class="col-sm-12 navbar navbar-expand-lg ">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <i class="material-icons">menu</i>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/"><i class="material-icons">home</i></a></li>
+              <%if session['user_id']%>
+                <li class="nav-item"><a class="nav-link" href="/post_auth/party">My Parties</a></li>
+                <li class="nav-item"><a class="nav-link" href="/post_auth/party/new">Schedule a Party</a></li>
+                <li class="nav-item"><a class="nav-link" a href="/venue">Venue Locations</a></li>
+                <li class="nav-item"><a class="nav-link" href="/post_auth/user/me">User Settings</a></li>
+              <%end%>
+              <% if session['admin'] == 'yes' %>
+                <li class="nav-item"><a class="nav-link" href="/admin/venue">Admin Venues</a></li>
+                <li class="nav-item"><a class="nav-link" href="/admin/theme">Admin Themes</a></li>
+              <% end %>
+              <% login_link = session['user_id'] ? '/logout' : '/pre_auth/login' %>
+              <% login_text = session['user_id'] ? 'Logout' : 'Login or Signup' %>
+              <li class="nav-item"><a class="nav-link" href="<%=login_link%>"><%=login_text%></a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
 
-    <%= yield %>
+      <%= yield %>
 
-    <footer class="container">
-      <div class="row mb-3"><small>&copy; 2020 <strong>PartyPlanner Inc.</strong></small></div>
-    </footer>
+      <div class="row mb-3">
+        <div class="col-sm-12 text-center" ><small>&copy; 2020 <strong>PartyPlanner Inc.</strong></small></div>
+      </div>
+    </div>
   </body>
 </html>
