--- a/app/views/party/view_all.erb
+++ b/app/views/party/view_all.erb
@@ -1,38 +1,84 @@
 <main class="container">
-  <h2><%= @user.name%>'s Parties</h2>
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <h3 class="text-center"><%= @user.name%>'s Parties</h3>
+    </div>
+  </div>
   <article>
-    <h3>Parties you are hosting:</h3>
-    <%#List of all parties created by user %>
-    <%='<p>You are not hosting any parties.  <a href="/post_auth/party/new">Why not start now?</a></p>' if @user_hosted.empty?%>
-    <%@user_hosted.each do |party| %>
-      <dl>
-        <dt><%=party.name%></dt>
-        <dd>theme: <%=party.theme.name%></dd>
-        <dd>Venue: <a href='/venue'><%=party.venue.name%></a></dd>
-        <dd>Date: <%=party.event_date%></dd>
-        <dd>TimeSlot: <%=Party.time_slot_to_date(party.time_slot)%></dd>
-        <dd><a href="/post_auth/party/<%=party.id%>"> Edit </a></dd>
-        <dd><a href="/post_auth/party/<%=party.id%>/invites">Manage Invites<a></dd>
-      </dl>
+    <div class="col-sm-12">
+      <h4 class="text-center">Parties you are hosting:</h4>
+    </div>
+    <%if @user_hosted.empty?%>
+      <div class="col-sm-12">
+        <p class="text-center">You are not hosting any parties. <a href="/post_auth/party/new">Why not start now?</a></p>
+      </div>
+    <%else%>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Theme</th>
+            <th>Venue</th>
+            <th>Date</th>
+            <th>TimeSlot</th>
+            <th>Edit</th>
+            <th>Manage Invite</th>
+          </tr>
+        </thead>
+        <tbody>
+          <%@user_hosted.each do |party| %>
+            <tr>
+              <td><%=party.name%></td>
+              <td><%=party.theme.name%></td>
+              <td><a href='/venue'><%=party.venue.name%></a></td>
+              <td><%=party.event_date%></td>
+              <td><%=Party.time_slot_to_date(party.time_slot)%></td>
+              <td><a href="/post_auth/party/<%=party.id%>"><i class="material-icons">build</i></a></td>
+              <td><a href="/post_auth/party/<%=party.id%>/invites"><i class="material-icons">people</i><a></td>
+            </tr>
+          <%end%>
+        </tbody>
+      </table>
     <%end%>
   </article>
   <article>
-    <h3>Parties you are invited to:</h3>
-    <%='<p>No pending invites.</p>' if @user_invited.empty?%>
-    <% @user_invited.each do |invite| %>
-      <%party = invite.party%>
-      <dl>
-        <dt><%=party.name%> hosted by <%="#{party.user.name} (#{party.user.email})"%></dt>
-        <dd>theme: <%=party.theme.name%></dd>
-        <dd>Venue: <a href='/venue'><%=party.venue.name%></a></dd>
-        <dd>Date: <%=party.event_date%></dd>
-        <dd>TimeSlot: <%=Party.time_slot_to_date(party.time_slot)%></dd>
-        <%if invite.status == 'pending'%>
-          <dd><a href="/post_auth/invite/<%=invite.id%>/accepted">Accept Invite</a> or <a href="/post_auth/invite/<%=invite.id%>/declined">Decline Invite<a></dd>
-        <%else%>
-          <dd>Party <%=invite.status%>!</dd>
-        <%end%>
-      </dl>
+    <div class="col-sm-12">
+      <h4 class="text-center">Parties you are invited to:</h4>
+    </div>
+    <%if @user_invited.empty?%>
+      <div class="col-sm-12">
+        <p class="text-center">No pending invites.</p>
+      </div>
+    <%else%>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Theme</th>
+            <th>Venue</th>
+            <th>Date</th>
+            <th>TimeSlot</th>
+            <th>Your Invite</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @user_invited.each do |invite| %>
+            <%party = invite.party%>
+            <tr>
+              <td><%=party.name%> hosted by <%="#{party.user.name} (#{party.user.email})"%></td>
+              <td><%=party.theme.name%></td>
+              <td><a href='/venue'><%=party.venue.name%></a></td>
+              <td><%=party.event_date%></td>
+              <td><%=Party.time_slot_to_date(party.time_slot)%></td>
+              <%if invite.status == 'pending'%>
+                <td><a href="/post_auth/invite/<%=invite.id%>/accepted">Accept Invite</a> or <a href="/post_auth/invite/<%=invite.id%>/declined">Decline Invite<a></td>
+              <%else%>
+                <td>Party <%=invite.status%>!</td>
+              <%end%>
+            </tr>
+          <%end%>
+        </tbody>
+      </table>
     <%end%>
   </article>
 </main>
